Fix grid spacing on form elements and force padding on buttons

--- a/app/webroot/css/app.css
+++ b/app/webroot/css/app.css
@@ -175,7 +175,7 @@ button,
   font-family: inherit;
   font-size: inherit;
   margin: 0 5px 5px 0;
-  padding: 1rem;
+  padding: 1rem !important;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
